@@ -81,7 +81,7 @@ function formatCurrency(number, type) {
 			places = 2; symbol = "£"; thousand = ","; decimal = "."; right = false;
 			break;
 		case "RUB":
-			places = 0; symbol = " pуб."; thousand = "."; decimal = ","; right = true;
+			places = 0; symbol = " pуб."; thousand = ""; decimal = ","; right = true;
 			if (number % 1 != 0) { places = 2; }
 			break;
 		case "JPY":
@@ -3410,11 +3410,11 @@ function add_active_total() {
 		var total = 0;
 		var total_after = 0;	
 		
-		$(".my_listing_section:first").find(".market_listing_row").find(".market_listing_my_price").each(function() {			
-			var temp = $(this).text().trim().replace(",", ".").replace(/[^0-9(\.]+/g,"").split("(");
+		$(".my_listing_section:first").find(".market_listing_row").find(".market_listing_my_price").each(function() {
+			var temp = $(this).text().trim().replace(/pуб./g,"").replace(/,(\d\d(?!\d))/g, ".$1").replace(/[^0-9(\.]+/g,"").split("(");
 			total += Number(temp[0]);
 			total_after += Number(temp[1]);
-			currency_symbol = $(this).text().trim().match(/(?:R\$|\$|€|£|pуб)/)[0];
+			currency_symbol = $(this).text().trim().match(/(?:R\$|\$|€|¥|£|pуб)/)[0];
 		});
 		
 		if (total != 0) {
@@ -3428,8 +3428,8 @@ function add_active_total() {
 		
 		$(".my_listing_section:nth-child(2)").find(".market_listing_row").find(".market_listing_my_price:first").each(function() {
 			var qty = $(this).parent().find(".market_listing_my_price:last").text().trim();
-			total += Number($(this).text().trim().replace(",", ".").replace(/[^0-9\.]+/g,"")) * Number(qty);
-			currency_symbol = $(this).text().trim().match(/(?:R\$|\$|€|£|pуб)/)[0];
+			total += Number($(this).text().trim().replace(/pуб./g,"").replace(/,(\d\d(?!\d))/g, ".$1").replace(/[^0-9\.]+/g,"")) * Number(qty);
+			currency_symbol = $(this).text().trim().match(/(?:R\$|\$|€|¥|£|pуб)/)[0];
 		});
 		
 		if (total != 0) {
