@@ -10,6 +10,7 @@ v6.6
 : Fixed a bug that caused DLC checkboxes not to work correctly due to a change made by Valve
 : Fixed a bug that caused highlighting to break for users with private profiles
 : Fixed an issue where cached inventory data would persist past its expiration
+: Fixed a bug with market totals for some users with certain currencies
 
 
 v6.5
